correcciones generales
